--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,14 +33,26 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaSwing6-7
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
 file.reference.flatlaf-3.2.5.jar=lib\\flatlaf-3.2.5.jar
+file.reference.jasperreports-5.6.0.jar=lib\\jasperreports-5.6.0.jar
+file.reference.KControls-2.0.jar=lib\\KControls-2.0.jar
 file.reference.mysql-connector-java-5.1.47.jar=lib\\mysql-connector-java-5.1.47.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-3.2.5.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${file.reference.KControls-2.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.jasperreports-5.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
